--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AR glTF Model</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aframe/1.2.0/aframe.min.js"></script>
+  <!-- Include A-Frame -->
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <!-- Include AR.js -->
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.2/aframe/build/aframe-ar.js"></script>
-  <script src="https://unpkg.com/three@0.126.1/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.126.1/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
 
@@ -16,15 +16,18 @@
   vr-mode-ui="enabled: false"
   arjs="sourceType: webcam; trackingMethod: best; debugUIEnabled: false;">
   
-  <!-- Markerless AR using WebXR -->
-  <a-entity camera look-controls wasd-controls></a-entity>
+  <!-- Camera entity for AR.js -->
+  <a-entity camera></a-entity>
 
   <!-- Load the glTF Model -->
-  <a-entity id="gltf-model" position="0 0 0" scale="0.05 0.05 0.05" rotation="0 0 0"
-            gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/CesiumMan/glTF/CesiumMan.gltf)"></a-entity>
+  <a-entity
+    gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF/Duck.gltf)"
+    scale="0.1 0.1 0.1"
+    position="0 0 -2"
+    rotation="0 180 0">
+  </a-entity>
 
 </a-scene>
 
 </body>
 </html>
-
