--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR glTF Model with Rear Aligned</title>
+  <title>AR glTF Model with Tail Lamp Aligned</title>
   <!-- Include A-Frame -->
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <!-- Include AR.js -->
@@ -24,9 +24,9 @@
     <!-- Load the glTF Model with Rotation -->
     <a-entity
       id="model"
-      gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF/Duck.gltf)"
+      gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF/Duck.gltf)" <!-- Replace with actual car model URL -->
       scale="0.5 0.5 0.5"
-      position="0 -0.25 -0.5"  <!-- Adjusted position to align rear -->
+      position="0 0 -1.0"  <!-- Adjusted position to align rear of the car -->
       rotation="0 180 0">
     </a-entity>
   </a-marker>
@@ -36,7 +36,7 @@
 
   <!-- Debug UI -->
   <a-entity id="debug" position="0 2 -2">
-    <a-text value="If the model doesn't appear, ensure the marker is visible and the model URL is correct." align="center"></a-text>
+    <a-text value="Ensure the marker is visible and the model URL is correct." align="center"></a-text>
   </a-entity>
 
 </a-scene>
