--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AR glTF Model with Rear Aligned</title>
+  <title>AR glTF Model with Tail Lamp Aligned</title>
   <!-- Include A-Frame -->
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <!-- Include AR.js -->
@@ -24,10 +24,10 @@
     <!-- Load the glTF Model with Rotation -->
     <a-entity
       id="model"
-      gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Table/glTF/Table.gltf)"
+      gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/DamagedHelmet/glTF/DamagedHelmet.gltf)" <!-- Replace with actual car model URL -->
       scale="0.5 0.5 0.5"
-      position="0 0 -0.5"  <!-- Adjusted position to align the rear of the table -->
-      rotation="0 180 0">
+      position="1.0 0 -1.0"  <!-- Adjusted position to align rear of the car -->
+      rotation="90 0 0">
     </a-entity>
   </a-marker>
 
