--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Load the glTF Model with Rotation -->
     <a-entity
       id="model"
-      gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/DamagedHelmet/glTF/DamagedHelmet.gltf)" <!-- Replace with actual car model URL -->
+      gltf-model="url(https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/Duck/glTF/Duck.gltf)" <!-- Replace with actual car model URL -->
       scale="0.5 0.5 0.5"
       position="1.0 0 -1.0"  <!-- Adjusted position to align rear of the car -->
       rotation="90 0 0">
